// ============================================================================
// /service/warranty-claims-service (版本 2.0)
// 描述: 管理产品的保修索赔流程。
// ============================================================================

syntax = "proto3";

package enterprise.service.warranty;

option java_package = "com.enterprise.service.warranty.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/service/warranty/v2;warranty";

import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: WarrantyClaimsService
// ============================================================================

service WarrantyClaimsService {
  // 创建保修索赔
  rpc CreateClaim(CreateClaimRequest) returns (ClaimResponse) {

    option (google.api.http) = {

      post: "/api/v1/service/claim"

      body: "*"

    };

  }
  
  // 更新索赔信息 (New)
  rpc UpdateClaim(UpdateClaimRequest) returns (ClaimResponse) {

  
    option (google.api.http) = {

  
      put: "/api/v1/service/claim"

  
      body: "*"

  
    };

  
  }

  // 获取保修索赔详情
  rpc GetClaim(GetClaimRequest) returns (ClaimDetail) {


    option (google.api.http) = {


      get: "/api/v1/service/claim"


    };


  }
  
  // 查询索赔列表 (New)
  rpc ListClaims(ListClaimsRequest) returns (ListClaimsResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/service/claims"

  
    };

  
  }
  
  // 添加证据附件 (New)
  rpc AddEvidenceAttachment(AddEvidenceAttachmentRequest) returns (ClaimResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/service/evidence-attachment/add"

  
      body: "*"

  
    };

  
  }

  // 裁定保修索赔 (批准/拒绝) - 异步
  rpc AdjudicateClaim(AdjudicateClaimRequest) returns (enterprise.common.JobInfo) {


    option (google.api.http) = {


      post: "/api/v1/service/adjudicate-claim"


      body: "*"


    };


  }
  
  // 关闭索赔 (New)
  rpc CloseClaim(CloseClaimRequest) returns (ClaimResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/service/close-claim"

  
      body: "*"

  
    };

  
  }
}

// ============================================================================
// 数据结构: Claim (索赔)
// ============================================================================

// 保修索赔详情
message ClaimDetail {
  string claim_id = 1;
  string customer_id = 2;
  string product_or_equipment_id = 3;
  google.protobuf.Timestamp failure_date = 4;
  string failure_description = 5;
  enterprise.common.MonetaryValue claimed_amount = 6;
  enterprise.common.ClaimStatus status = 7;
  AdjudicationResult adjudication = 8;
  repeated string attachment_urls = 9;
}

// 裁定结果
message AdjudicationResult {
  string adjudicated_by = 1;
  google.protobuf.Timestamp adjudication_date = 2;
  enterprise.common.MonetaryValue approved_amount = 3;
  string notes = 4;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 创建索赔请求
message CreateClaimRequest {
  ClaimDetail claim = 1;
  enterprise.common.RequestContext context = 99;
}

message UpdateClaimRequest {
  string claim_id = 1;
  ClaimDetail claim = 2;
  repeated string update_mask = 3;
  enterprise.common.RequestContext context = 99;
}

// 索赔响应
message ClaimResponse {
  bool success = 1;
  string claim_id = 2;
  repeated enterprise.common.ApiMessage messages = 3;
}

// 获取索赔请求
message GetClaimRequest {
  string claim_id = 1;
  enterprise.common.RequestContext context = 99;
}

message ListClaimsRequest {
  string customer_id = 1;
  string product_id = 2;
  enterprise.common.DateRange date_range = 3;
  enterprise.common.ClaimStatus status_filter = 4;
  enterprise.common.PaginationRequest pagination = 98;
  enterprise.common.RequestContext context = 99;
}

message ListClaimsResponse {
  repeated ClaimDetail claims = 1;
  enterprise.common.PaginationResponse pagination = 2;
}

message AddEvidenceAttachmentRequest {
  string claim_id = 1;
  string attachment_url = 2;
  string description = 3;
  enterprise.common.RequestContext context = 99;
}

// 裁定索赔请求
message AdjudicateClaimRequest {
  string claim_id = 1;
  enterprise.common.ClaimStatus new_status = 2;
  AdjudicationResult result = 3;
  enterprise.common.RequestContext context = 99;
}

message CloseClaimRequest {
  string claim_id = 1;
  string closure_reason = 2;
  enterprise.common.RequestContext context = 99;
}
